--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,38 @@
   
   <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
  </head>
- <body>
-  <div class="app-container"><!-- Header con selector y botones -->
+ <body><!-- Pantalla de Inicio de Sesión -->
+  <div class="login-screen" id="loginScreen">
+   <div class="login-container"><!-- Header con botones de tema e info -->
+    <div class="login-header"><button class="login-header-btn" id="themeBtn" title="Cambiar tema"> <i class="fas fa-moon"></i> </button> <button class="login-header-btn" id="infoBtn" title="Información"> <i class="fas fa-info-circle"></i> </button>
+    </div><!-- Logo y título -->
+    <div class="login-logo">
+     <div class="logo-icon"><i class="fas fa-graduation-cap"></i>
+     </div>
+     <h1 class="app-title">EscolarFam</h1>
+     <p class="app-subtitle">Sistema Escolar Inteligente</p>
+    </div><!-- Formulario de login -->
+    <form class="login-form" id="loginForm">
+     <div class="form-group"><label class="form-label"> <i class="fas fa-user"></i> Usuario </label> <input type="text" class="form-input" id="username" placeholder="Ingresa tu usuario" required>
+     </div>
+     <div class="form-group"><label class="form-label"> <i class="fas fa-lock"></i> Contraseña </label>
+      <div class="password-input"><input type="password" class="form-input" id="password" placeholder="Ingresa tu contraseña" required> <button type="button" class="password-toggle" onclick="togglePassword()"> <i class="fas fa-eye"></i> </button>
+      </div>
+     </div><!-- Opciones adicionales -->
+     <div class="login-options"><label class="checkbox-container"> <input type="checkbox" id="rememberMe"> <span class="checkmark"></span> No cerrar sesión </label> <a href="#" class="forgot-password" onclick="showForgotPassword()"> ¿Olvidaste tu contraseña? </a>
+     </div><!-- Botón de login --> <button type="submit" class="login-button"> <i class="fas fa-sign-in-alt"></i> Iniciar Sesión </button>
+    </form><!-- Footer -->
+    <div class="login-footer">
+     <p>© 2024 EscolarFam - Desarrollado con ❤️</p>
+     <p class="version">Versión 1.0.0</p>
+    </div>
+   </div>
+  </div><!-- Aplicación Principal (oculta inicialmente) -->
+  <div class="app-container" id="appContainer" style="display: none;"><!-- Header con selector y botones -->
    <div class="header">
     <div class="role-selector"><select id="roleSelector"> <option value="alumno"> Alumno</option> <option value="padre"> Padre de Familia</option> <option value="maestro"> Maestro</option> <option value="admin"> Director/Admin</option> </select>
     </div>
-    <div class="header-buttons"><button class="header-button" id="friendsBtn" title="Amigos"> <i class="fas fa-users"></i> </button> <button class="header-button" id="themeBtn" title="Cambiar tema"> <i class="fas fa-moon"></i> </button> <button class="header-button" id="registerBtn" title="Registrar usuarios" style="display: none;"> <i class="fas fa-user-plus"></i> </button> <button class="header-button" id="logoutBtn" title="Cerrar sesión"> <i class="fas fa-sign-out-alt"></i> </button>
+    <div class="header-buttons"><button class="header-button" id="friendsBtn" title="Amigos"> <i class="fas fa-users"></i> </button> <button class="header-button" id="appThemeBtn" title="Cambiar tema"> <i class="fas fa-moon"></i> </button> <button class="header-button" id="registerBtn" title="Registrar usuarios" style="display: none;"> <i class="fas fa-user-plus"></i> </button> <button class="header-button" id="logoutBtn" title="Cerrar sesión"> <i class="fas fa-sign-out-alt"></i> </button>
     </div>
    </div><!-- Contenido Principal -->
    <div class="main-content" id="mainContent"><!-- Las pantallas se generarán dinámicamente -->
@@ -23,34 +49,92 @@
    <div class="bottom-nav">
     <div class="nav-container"><!-- La navegación se genera dinámicamente -->
     </div>
-   </div><!-- Modal de Amigos -->
-   <div class="modal" id="friendsModal">
-    <div class="modal-content">
-     <div class="modal-header">
-      <div class="modal-title">
-       Mis Amigos
-      </div><button class="modal-close" onclick="closeModal('friendsModal')"> <i class="fas fa-times"></i> </button>
-     </div>
-     <div id="friendsList"><!-- Lista de amigos se genera dinámicamente -->
+   </div>
+  </div><!-- Modal de Amigos -->
+  <div class="modal" id="friendsModal">
+   <div class="modal-content">
+    <div class="modal-header">
+     <div class="modal-title">
+      Mis Amigos
+     </div><button class="modal-close" onclick="closeModal('friendsModal')"> <i class="fas fa-times"></i> </button>
+    </div>
+    <div id="friendsList"><!-- Lista de amigos se genera dinámicamente -->
+    </div>
+   </div>
+  </div><!-- Modal de Registro -->
+  <div class="modal" id="registerModal">
+   <div class="modal-content">
+    <div class="modal-header">
+     <div class="modal-title">
+      Registrar Usuario
+     </div><button class="modal-close" onclick="closeModal('registerModal')"> <i class="fas fa-times"></i> </button>
+    </div>
+    <div id="registerForm"><!-- Formulario de registro se genera dinámicamente -->
+    </div>
+   </div>
+  </div><!-- Modal de Información -->
+  <div class="info-modal" id="infoModal">
+   <div class="info-modal-content">
+    <div class="info-modal-header">
+     <div class="info-modal-title"><i class="fas fa-info-circle"></i> Información de la Aplicación
+     </div><button class="info-modal-close" onclick="closeInfoModal()"> <i class="fas fa-times"></i> </button>
+    </div>
+    <div class="info-section">
+     <h3><i class="fas fa-graduation-cap"></i> Acerca de EscolarFam</h3>
+     <p>EscolarFam es un sistema escolar inteligente diseñado para facilitar la comunicación y gestión entre estudiantes, padres de familia, maestros y administradores escolares.</p>
+    </div>
+    <div class="info-section">
+     <h3><i class="fas fa-star"></i> Características Principales</h3>
+     <ul class="feature-list">
+      <li><i class="fas fa-id-card"></i> Gafetes digitales con códigos QR</li>
+      <li><i class="fas fa-comments"></i> Sistema de mensajería integrado</li>
+      <li><i class="fas fa-car"></i> Solicitudes de recogida en tiempo real</li>
+      <li><i class="fas fa-bell"></i> Notificaciones y alertas automáticas</li>
+      <li><i class="fas fa-users"></i> Gestión de grupos y estudiantes</li>
+      <li><i class="fas fa-ticket-alt"></i> Sistema de tickets y consultas</li>
+      <li><i class="fas fa-brain"></i> Panel de monitoreo avanzado</li>
+      <li><i class="fas fa-mobile-alt"></i> Interfaz responsive y táctil</li>
+     </ul>
+    </div>
+    <div class="info-section">
+     <h3><i class="fas fa-shield-alt"></i> Seguridad y Privacidad</h3>
+     <p>Todos los datos están protegidos con encriptación de extremo a extremo. La aplicación cumple con los estándares de seguridad educativa y protección de datos de menores.</p>
+    </div>
+    <div class="info-section">
+     <h3><i class="fas fa-code"></i> Información del Desarrollador</h3>
+     <div class="developer-info">
+      <p><strong>Desarrollado por:</strong> Canva Code</p>
+      <p><strong>Versión:</strong> 1.0.0</p>
+      <p><strong>Fecha:</strong> 2024</p>
+      <p><strong>Tecnologías:</strong> HTML5, CSS3, JavaScript, Font Awesome</p>
+      <p><strong>Compatibilidad:</strong> Todos los navegadores modernos y dispositivos móviles</p>
      </div>
     </div>
-   </div><!-- Modal de Registro -->
-   <div class="modal" id="registerModal">
-    <div class="modal-content">
-     <div class="modal-header">
-      <div class="modal-title">
-       Registrar Usuario
-      </div><button class="modal-close" onclick="closeModal('registerModal')"> <i class="fas fa-times"></i> </button>
-     </div>
-     <div id="registerForm"><!-- Formulario de registro se genera dinámicamente -->
+    <div class="info-section">
+     <h3><i class="fas fa-heart"></i> Agradecimientos</h3>
+     <p>Gracias a todas las instituciones educativas que confían en EscolarFam para mejorar la comunicación escolar y crear un ambiente más conectado y seguro para nuestros estudiantes.</p>
+    </div>
+   </div>
+  </div><!-- Modal de Recuperar Contraseña -->
+  <div class="forgot-modal" id="forgotModal">
+   <div class="forgot-modal-content">
+    <div class="info-modal-header">
+     <div class="info-modal-title"><i class="fas fa-key"></i> Recuperar Contraseña
+     </div><button class="info-modal-close" onclick="closeForgotModal()"> <i class="fas fa-times"></i> </button>
+    </div>
+    <div class="info-section">
+     <p>Ingresa tu correo electrónico y te enviaremos las instrucciones para restablecer tu contraseña.</p>
+     <div class="form-group"><label class="form-label"> <i class="fas fa-envelope"></i> Correo Electrónico </label> <input type="email" class="form-input" id="recoveryEmail" placeholder="tu-email@ejemplo.com" required>
+     </div><button class="login-button" onclick="sendRecoveryEmail()"> <i class="fas fa-paper-plane"></i> Enviar Instrucciones </button>
+     <div style="text-align: center; margin-top: 20px;"><a href="#" class="forgot-password" onclick="closeForgotModal()"> Volver al inicio de sesión </a>
      </div>
     </div>
-   </div><!-- Overlay para opciones de burbujas -->
-   <div class="bubble-overlay" id="bubbleOverlay">
-    <div class="bubble-options" id="bubbleOptions"><!-- Las opciones se generan dinámicamente -->
-    </div>
+   </div>
+  </div><!-- Overlay para opciones de burbujas -->
+  <div class="bubble-overlay" id="bubbleOverlay">
+   <div class="bubble-options" id="bubbleOptions"><!-- Las opciones se generan dinámicamente -->
    </div>
   </div>
   <script src="app.js"></script>
- </body>
+</body>
 </html>
